# celus

./: .coveragerc  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.rst  RELEASES.yaml  bootstrap.sh  create_fixtures.sh  dump_basic_defs.sh  fix_csv.py  prepare_demo.ipynb  pyproject.toml  pytest.ini  readthedocs.yaml  start_celery.sh  start_celerybeat.sh  test_coverage.sh  update-requirements.sh
.github/workflows/: build-node.yaml  release.yaml
.gitlab/: build-image.yml  build-vue.yml  github-export.yml  pre-commit.yml  run-tests.yml  sentry.yml  test-image.yml  test-js.yml
apps/: conftest.py
apps/activity/: admin.py  apps.py  models.py  signals.py
apps/annotations/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/api/: admin.py  auth.py  models.py  permissions.py  urls.py  views.py
apps/charts/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/core/: account.py  admin.py  apps.py  auth.py  authentication.py  context_managers.py  db.py  exceptions.py  filters.py  middleware.py  models.py  pagination.py  permissions.py  prometheus.py  serializers.py  signals.py  task_support.py  tasks.py  urls.py  validators.py  views.py
apps/cost/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/deployment/: admin.py  models.py  serializers.py  urls.py  views.py
apps/erms/: api.py  experiments.py  sync.py
apps/export/: admin.py  apps.py  enums.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/impersonate_api/: apps.py  permissions.py  serializers.py  urls.py  views.py
apps/knowledgebase/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py
apps/logs/: admin.py  apps.py  constants.py  cubes.py  exceptions.py  filters.py  models.py  serializers.py  signals.py  tasks.py  translation.py  urls.py  validators.py  views.py
apps/necronomicon/: admin.py  apps.py  models.py  tasks.py
apps/nibbler/: admin.py  apps.py  models.py
apps/nigiri/: __init__.py  client.py  counter4.py  counter5.py  error_codes.py  exceptions.py
apps/organizations/: admin.py  models.py  serializers.py  tasks.py  translation.py  urls.py  views.py
apps/publications/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tasks.py  translation.py  urls.py  views.py
apps/recache/: admin.py  apps.py  models.py  tasks.py  util.py
apps/releases/: parsers.py  releases_parser.py  serializers.py  urls.py  views.py
apps/reporting/: __init__.py  apps.py  conftest.py  urls.py  views.py
apps/scheduler/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/sushi/: admin.py  apps.py  client.py  counter4.py  counter5.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/tags/: admin.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
ci/: Dockerfile
config/: __init__.py  celery_conf.py  production.wsgi  staging.wsgi  urls.py  wsgi.py
config/settings/: __init__.py  base.py  devel.py  docker.py  json_settings.py  production.py  secret_settings.json.example  staging.py  test.py
data/: TestFlexibleDataSlicer.csv  initial-data.json
design/ui/: README.md  babel.config.js  jest.config.js  package-lock.json  package.json  vue.config.js  vue.config.js.build
doc/: basic_defs.json  database-structure-2019-06-03-no-explicit-platform-publication.dia  database-structure.dia  page-structure.dia
doc/examples/: ex-just-values.csv  ex-just-values.ods  ex-metric.csv  ex-title-metric-publisher-success.ods  ex-title-metric-publisher.ods  ex-title.ods
docker/: docker-compose-k8s.yml  docker-compose.yml  entrypoint-celery-beat.sh  entrypoint-celery.py  entrypoint-web.sh  env.list  nginx.conf
docs/: Uživatelská dokumentace.odt  admin.rst  advanced-topics.rst  conf.py  external-api.rst  index.rst  install.rst  server-maintenance.rst  tags.rst  topics.rst  trying-celus.rst  user.rst
docs/ansible/: celus.yaml
docs/examples/: ex-metric.ods
k8s/: INSTALL.rst  celery-beat-deployment.yaml  celery-worker-deployment.yaml  generate.sh  ingress-config.yaml  letsencrypt-issuer.yaml  nginx-deployment.yaml  nginx-ingress.yaml  nginx-service.yaml  postgres-deployment.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  web-deployment.yaml  web-service.yaml
k8s/secrets/: secrets-celus.yaml  secrets-gitlab.yaml
playground/: counter4.ipynb  counter_v5.ipynb  sushi_test.py
requirements/: base.txt  devel.txt  develop.txt  docker.txt  production.txt  test.txt
test-data/counter4/: 4_BR2_invalid_location1.xml  4_BR2_not_supported1.xml  4_BR2_service_not_available1.xml  4_BR2_unauthorized1.xml  4_BR2_unauthorized2.xml  4_JR1_missing_reports_tag.xml  4_JR2_denials.tsv  4_PR1_invalid_requestor.xml  counter4_br2_one_month.tsv  counter4_jr1_empty.tsv  sushi_1111-severity-missing.xml  sushi_1111-severity-number.xml  sushi_1111.xml  sushi_3030.xml  sushi_3040.xml  sushi_exception-with-extra-attrs.xml
test-data/counter5/: 5_TR_ProQuestEbookCentral_exception.json  5_TR_with_warning.json  C5_PR_test.json  COUNTER_R5_Report_Examples_DR.csv  COUNTER_R5_Report_Examples_PR.csv  COUNTER_R5_Report_Examples_TR.csv  code-zero.json  counter5_table_dr.csv  counter5_table_dr.tsv  counter5_table_ir_m1.csv  counter5_table_mismatched_rt.csv  counter5_table_pr.csv  counter5_tr_nature.json  counter5_tr_test1.json  counter5_tr_test1_wrong_id.json  data_simple.json  dr-extra-ids.json  error-in-root.json  invalid-customer.json  naked_error.json  naked_error_3000.json  naked_error_lowercase.json  no_data.json  no_data_3050.json  no_data_3062.json  no_json.txt  null-in-Item_ID.json  partial_data1.json  partial_data2.json  partial_data3.json  severity-missing.json  severity-number.json  severity-wrong.json  some_data_3050.json  some_data_3062.json  stringified_error.json
test-data/custom/: custom_data-2d-3x2x3-isodate.csv  custom_data-2d-3x2x3-org-isodate-single.csv  custom_data-2d-3x2x3-org-isodate.csv  (+2 more)
(+1101 files in other folders)
