[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py36"]

[tool.poetry]
name = "celus"
version = "3.0.1"
description = "web application for harvesting and visualization of usage data of electronic information sources"
authors = ["Beda Kosata <beda@bigdigdata.com>", "Stepan Henek <stepan@bigdigdata.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.8"

celery = "~5.0.2"
dateparser = "~0.7.4"
Django = "~3.1.3"
django-allauth = "~0.41.0"
django-anymail = "~7.1.0"
django-celery-results = "~2.0.0"
django-cachalot = "~2.3.5"
django-error-report = "~0.2.0"
django-modeltranslation = "~0.15.0"
django-mptt = "~0.11.0"
django-prometheus = "~2.0.0"
django-redis = "~4.11.0"
django-reversion = "~3.0.7"
djangorestframework = "~3.11.0"
drf-nested-routers = "~0.91.0"
lz4 = "~3.0.2"
pycounter = {git = "https://github.com/beda42/pycounter.git", branch = "fa5d03ac29da0efd5a57db54eb1b6be9a094e102"}
python-magic = "~0.4.15"
pytz = "*"
psutil = "~5.7.0"
psycopg2-binary = "~2.8.5"
redis = "~3.5.0"
rest-pandas = "~1.1.0"
requests = "^2.23.0"
urllib3 = "~1.25.0"
django-rest-auth = "~0.9.5"
ijson = "^3.0.4"
python-decouple = "^3.3"
sentry-sdk = "^0.16.1"
Pillow = "^7.2.0"
isbnlib = "^3.10.3"
xmltodict = "^0.12.0"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
django-test-migrations = "^1.1.0"



[tool.poetry.dev-dependencies]
black = {version = "19.10b0", allow-prereleases = true}
django-debug-toolbar = "^3.2.1"
django-querycount = "^0.7.0"
jupyter = "^1.0.0"
pre-commit = "^2.4.0"
pytest = "^6.2.3"
pytest-env = "^0.6.2"
pytest-django = "^4.2.0"
django-webtest = "^1.9.7"
requests-mock = "~1.8.0"
pyfakefs = "^4.0.2"
Faker = "^4.0.3"
factory-boy = "^2.12.0"
freezegun = "^0.3.15"
sphinx = "^3.0.3"
dj-inmemorystorage = "^2.1.0"
