[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py38"]
# old versions of black used to put a comma at the end of
#
# fn(
#     arg1, arg2,
# )
#
# and new versions interpret this as a "magic comma" and use it to split it to one item per line
# (https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#the-magic-trailing-comma):
#
# fn(
#     arg1,
#     arg2,
# )
#
# which we do not like. So we preserve the old behavior with the following
#
# We could also keep the new magic comma behavior, but do one-off reformatting using the following
# setting just to remove the magic commas in the first place
skip-magic-trailing-comma = true

[tool.poetry]
name = "celus"
version = "4.4.5"
description = "web application for harvesting and visualization of usage data of electronic information sources"
authors = ["Beda Kosata <beda@bigdigdata.com>", "Stepan Henek <stepan@bigdigdata.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.10"

celery = "~5.2.3"
dateparser = "~0.7.4"
regex = "<2022.3.15" # dateparser does not limit version of regex, but does not work with >=2022.3.15
tzlocal = "<3.0"  # dateparser does not limit version of tzlocal, but does not work with >=3.0
diskcache = "5.3"
Django = "~3.2.7"
django-allauth = "~0.41.0"
django-anymail = "~7.1.0"
django-celery-results = "~2.2.0"
django-cachalot = "~2.4.1"
django-modeltranslation = "~0.17.0"
django-mptt = "~0.11.0"
django-prometheus = "~2.0.0"
django-redis = "~4.11.0"
django-reversion = "~3.0.7"
djangorestframework = "~3.11.0"
drf-nested-routers = "~0.91.0"
lz4 = "~3.0.2"
pycounter = {git = "https://github.com/beda42/pycounter.git", rev = "7d3b8470d909e3a9c989492c01fd8d40b89248cd"}
openpyxl = "~3.0.7, !=3.0.8"  # openpyxl 3.0.8 was removed after release :/ grrrr, so we need to prevent it
python-magic = "~0.4.15"
pytz = "*"
psutil = "~5.7.0"
psycopg2-binary = "~2.9.1"
redis = "~3.5.0"
rest-pandas = "~1.1.0"
requests = "^2.23.0"
urllib3 = "~1.25.0"
dj-rest-auth = "~2.1.11"
ijson = "^3.0.4"
python-decouple = "^3.3"
sentry-sdk = "^0.16.1"
Pillow = "^9.0.1"
isbnlib = "^3.10.3"
xmltodict = "^0.12.0"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
django-test-migrations = "^1.1.0"
django-import-export = "^2.5.0"
djangorestframework-api-key = "^2.0.0"
hcube = "0.3.1"
chardet = "^4.0.0"
XlsxWriter = "^3.0.3"
toml = "^0.10.2"
django-postgres-copy = "^2.7.0"


[tool.poetry.dev-dependencies]
black = {version = "19.10b0", allow-prereleases = true}
click = "~8.0.4"  # black does not work with higher version of click and does not say so :(
django-debug-toolbar = "^3.2.1"
django-querycount = "^0.7.0"
jupyter = "^1.0.0"
pre-commit = "^2.4.0"
pytest = "^6.2.3"
pytest-env = "^0.6.2"
pytest-django = "^4.2.0"
django-webtest = "^1.9.7"
requests-mock = "~1.8.0"
pyfakefs = "^4.0.2"
Faker = "^4.0.3"
factory-boy = "^3.2.1"
freezegun = "^0.3.15"
sphinx = "^3.0.3"
dj-inmemorystorage = "^2.1.0"
django-extensions = "^3.1.3"
pyparsing = "^2.4.7"
pydot = "^1.4.2"
watchdog = {extras = ["watchmedo"], version = "^2.1.6"}
